<resources>
    <string name="app_name">DhwaniTaskAbhinav</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">User Name</string>
    <string name="passowrd">Password</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="login">Login</string>
    <string name="city_name">Save City Name</string>
    <string name="select_state">Select State</string>
    <string name="hint_city_name">Enter City Name</string>
    <string name="preference_file_key">PREFERENCE_FILE</string>
</resources>
